{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 4,
  "lineage": "085df378-dcea-93a2-0e2d-46c2a2e72e68",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "admin_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080",
                  "8081",
                  "8082"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-12T01:54:40.329-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-provisioning-503017/global/firewalls/allow-ci-stack-admin",
            "log_config": [],
            "name": "allow-ci-stack-admin",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-provisioning-503017/global/networks/default",
            "priority": 1000,
            "project": "terraform-provisioning-503017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-provisioning-503017/global/firewalls/allow-ci-stack-admin",
            "source_ranges": [
              "102.89.75.214"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ci-stack"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "github_webhook",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-12T01:54:41.739-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-provisioning-503017/global/firewalls/allow-github-webhook",
            "log_config": [],
            "name": "allow-github-webhook",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-provisioning-503017/global/networks/default",
            "priority": 1000,
            "project": "terraform-provisioning-503017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-provisioning-503017/global/firewalls/allow-github-webhook",
            "source_ranges": [
              "140.82.112.0/20",
              "143.55.64.0/20",
              "185.199.108.0/22",
              "192.30.252.0/22"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jenkins-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ci_stack",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260811",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 40,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-provisioning-503017/zones/us-east1-b/disks/ci-teaching-kit-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-provisioning-503017/zones/us-east1-b/instances/ci-teaching-kit-vm",
            "instance_id": "6484451513825593917",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "POOF1vW0WwM=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\n# Install Docker\napt-get update\napt-get install -y ca-certificates curl gnupg git\ninstall -m 0755 -d /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc\nchmod a+r /etc/apt/keyrings/docker.asc\necho \\\n  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian \\\n  $(. /etc/os-release \u0026\u0026 echo \"$VERSI [...]
            "name": "ci-teaching-kit-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.227.107.144",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-provisioning-503017/global/networks/default",
                "network_ip": "10.142.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-provisioning-503017/regions/us-east1/subnetworks/default",
                "subnetwork_project": "terraform-provisioning-503017"
              }
            ],
            "project": "terraform-provisioning-503017",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-provisioning-503017/zones/us-east1-b/instances/ci-teaching-kit-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ci-stack",
              "jenkins-server"
            ],
            "tags_fingerprint": "CKCjz4tLdI4=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}